Link hover color

--- a/styles.scss
+++ b/styles.scss
@@ -9,7 +9,7 @@ $font-family-monospace: "Source Code Pro", monospace;
 // Links
 $link-decoration:       none;
 $link-color:            #E5751F;
-$hover-color:           lighten($link-color, 40%);
+$link-hover-color:      #ffaa00;
 $link-hover-decoration: underline;
 
 $sidebar-bg: #861F41;
